@@ -162,6 +162,7 @@ Varun Reddy (varunamarreddy@gmail.com)
 Ken Renard (kenneth.renard@arl.army.mil)
 Getachew Redieteab (redieteab.orange@gmail.com)
 Manuel Requena (mrequena@cttc.es)
+Jakub Rewienski (jrewienski@gmail.com)
 Matias Richart (mrichart@fing.edu.uy)
 George F. Riley (riley@ece.gatech.edu)
 Juergen Rinas (jrinas@gmx.de)
